test/invalid/baseline/callback-noparen.txt
Syntax error at line 1, since `callback YourCall`:
callback YourCall = void;
                        ^ Callback lacks parentheses for arguments
